--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -139,7 +139,7 @@ nav ul {
                 <a class="nav-link active" href="./onlinetest.html">Online Test</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="./leaderboard.html">Leaderboard</a>
+                <a class="nav-link disabled" href="./leaderboard.html">Leaderboard</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="./contact.html">Contact Us</a>
