--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -136,7 +136,7 @@ nav ul {
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="./onlinetest.html">Online Test</a>
+                <a class="nav-link disabled" href="./onlinetest.html">Online Test</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link disabled" href="./leaderboard.html">Leaderboard</a>
