--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -117,7 +117,64 @@ nav ul {
   }
 }
 
+.theme-switch-wrapper {
+  padding: 1%;
+  /* background-color: var(--font-color); */
+  display: flex;
+  align-items: center;
+  overflow: hidden
+}
 
+.theme-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+  margin: 10px;
+}
+
+.theme-switch input {
+  display: none;
+}
+
+.slider {
+  color: var(--font-color);
+  background-color: rgba(0, 0, 0, 0.4);
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: .4s;
+}
+
+.slider:before {
+  background-color: var(--bg-color);
+  bottom: 4px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: .4s;
+  width: 26px;
+}
+
+input:checked+.slider {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+input:checked+.slider:before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
 
 </style>
 
