--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -178,7 +178,7 @@ input:checked+.slider:before {
 
 </style>
 
-    <a class="navbar-brand" href="./index.html"><img src="./static/images/BITS-logo-w.gif" alt="BITS"
+    <a class="navbar-brand" href="https://bits.acicts.lk/"><img src="./static/images/BITS-logo-w.gif" alt="BITS"
             class="logo" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
