--- a/static/CSS/tasks.css
+++ b/static/CSS/tasks.css
@@ -39,7 +39,14 @@ body {
   margin-left: -80;
 }
 
-
+#id {
+  float: right;
+  width: 100px;
+  height: 20px;
+  font-size: 13px;
+  padding: 0%;
+  border: 0rem;
+}
 
 .buttons {
   margin-top: -2%;
