--- a/static/CSS/tasks.css
+++ b/static/CSS/tasks.css
@@ -31,6 +31,15 @@ body {
   box-shadow: 0px 0px 5px 1px var(--secondary-color);
 }
 
+.tasks.important{
+  border-style: solid;
+  border-color: darkorange;
+  border-width: 5px;
+  -webkit-box-shadow: 0px 0px 0px 0px var(--secondary-color);
+  -moz-box-shadow: 0px 0px 0px 0px var(--secondary-color);
+  box-shadow: 0px 0px 0px 0px var(--secondary-color);
+}
+
 .tasks p {
   width: 50%;
 }
