--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -193,9 +193,9 @@ input:checked+.slider:before {
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="./onlinetest.html">Online Test</a>
+                <a class="nav-link active" href="./onlinetest.html">Online Test</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item disabled">
                 <a class="nav-link disabled" href="./leaderboard.html">Leaderboard</a>
             </li>
             <li class="nav-item active">
