--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -195,8 +195,8 @@ input:checked+.slider:before {
             <li class="nav-item">
                 <a class="nav-link active" href="./onlinetest.html">Online Test</a>
             </li>
-            <li class="nav-item disabled">
-                <a class="nav-link disabled" href="./leaderboard.html">Leaderboard</a>
+            <li class="nav-item active">
+                <a class="nav-link" href="./leaderboard.html">Leaderboard</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="./contact.html">Contact Us</a>
