--- a/static/CSS/tasks.css
+++ b/static/CSS/tasks.css
@@ -29,9 +29,26 @@ body {
   -webkit-box-shadow: 0px 0px 5px 1px var(--secondary-color);
   -moz-box-shadow: 0px 0px 5px 1px var(--secondary-color);
   box-shadow: 0px 0px 5px 1px var(--secondary-color);
+display:none;
+}
+.show{
+  display: block;
 }
 
 .tasks.important{
+  float: left;
+  margin-top: 10px;
+  margin-left: 10%;
+  padding: 2%;
+  border-radius: 10px;
+  margin-bottom: 2%;
+  color: var(--font-color);
+  background-color: var(--heading-color);
+  width: 60%;
+  height: 20%;
+  -webkit-box-shadow: 0px 0px 5px 1px var(--secondary-color);
+  -moz-box-shadow: 0px 0px 5px 1px var(--secondary-color);
+  box-shadow: 0px 0px 5px 1px var(--secondary-color);
   border-style: solid;
   border-color: darkorange;
   border-width: 5px;
@@ -39,7 +56,14 @@ body {
   -moz-box-shadow: 0px 0px 0px 0px var(--secondary-color);
   box-shadow: 0px 0px 0px 0px var(--secondary-color);
 }
-
+#filterContainer{
+  border-style: solid;
+  border-color: darkorange;
+  border-width: 5px;
+  -webkit-box-shadow: 0px 0px 0px 0px var(--secondary-color);
+  -moz-box-shadow: 0px 0px 0px 0px var(--secondary-color);
+  box-shadow: 0px 0px 0px 0px var(--secondary-color);
+}
 .tasks p {
   width: 50%;
 }
