--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -105,7 +105,7 @@
   
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://acicts.io/"> ACICTS</a>
+      <a href="https://acicts.lk/"> ACICTS</a>
     </div>
     <!-- Copyright -->
   
