--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -118,6 +118,7 @@ nav ul {
 }
 
 .theme-switch-wrapper {
+  width: 220px;
   padding: 1%;
   /* background-color: var(--font-color); */
   display: flex;
