--- a/static/CSS/tasks.css
+++ b/static/CSS/tasks.css
@@ -15,6 +15,14 @@ body {
   margin-top: 100px;
 }
 
+#explain {
+  background-color: rgb(13, 0, 83);
+}
+
+.explain-para {
+  width: 80%;
+}
+
 .tasks {
   float: left;
   margin-top: 10px;
@@ -33,15 +41,21 @@ body {
 
 .tasks.important{
   border-style: solid;
+  background-color: rgb(4, 0, 63);
   border-color: darkorange;
   border-width: 5px;
   -webkit-box-shadow: 0px 0px 0px 0px var(--secondary-color);
   -moz-box-shadow: 0px 0px 0px 0px var(--secondary-color);
   box-shadow: 0px 0px 0px 0px var(--secondary-color);
 }
+#atask {
+  border-style: solid;
+  border-color: darkorange;
+  border-width: 2px;
+}
 
 .tasks p {
-  width: 50%;
+  width: 100%;
 }
 
 #catocery {
@@ -91,7 +105,7 @@ body {
 
 @media only screen and (max-width : 992px) {
   .tasks p {
-    width: 70%;
+    width: 100%;
   }
 
 }
@@ -99,7 +113,7 @@ body {
 @media only screen and (max-width : 768px) {
 
   .tasks p {
-    width: 60%;
+    width: 100%;
   }
 
   .tasks {
@@ -124,7 +138,7 @@ body {
   }
 
   .tasks p {
-    width: 90%;
+    width: 100%;
   }
 
   .tasks {
