--- a/static/CSS/leaderboard.css
+++ b/static/CSS/leaderboard.css
@@ -55,3 +55,61 @@
   margin-top: 30px;
   margin-left: 5%;
 }
+
+.social {
+  width: 100%;
+  padding: 0;
+  margin-top: 10px;
+  list-style: none;
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+.stars {
+  transition: 0.5s ease;
+}
+
+.stars:hover {
+  font-size: 3.5rem;
+  color: aqua;
+}
+
+.phone {
+  padding: 0;
+  margin: 80px;
+  list-style: none;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
+  
+}
+
+.chat {
+  background: var(--heading-color);
+  padding: 1%;
+  width: 300px;
+  height: 170px;
+  margin: 10px;
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+  -webkit-box-shadow: 0px 0px 5px 1px var(--secondary-color);
+  -moz-box-shadow: 0px 0px 5px 1px var(--secondary-color);
+  box-shadow: 0px 0px 5px 1px var(--secondary-color);
+}
+
+.chat a {
+  color: var(--chat-color);
+}
