--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
         
         <div class="alert">
           <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-          <strong>Winners of the competition has been announced !</strong>
+          <strong>Winners of the competition have been announced!</strong>
         </div>
 
     {{ content }}
